# intrusion_detection_RFL

./: .gitignore  LICENSE  README.md
centralized/: README.md  plei.py
centralized/MLP/tf-keras/: pyproject.toml
centralized/MLP/tf-keras/tf_keras/: train_test_save.py
centralized/MLP/tf-keras/tf_keras/models/: mul_model.keras  one_model.keras
centralized/RL/: exp_mul.ipynb  experiment.ipynb  test.py  train_test_save.py  utils.py
centralized/classifiers/: classifiers.ipynb
data/processed_data/current_testing/: create_unique.ipynb
environments/: tabularenv.py  tabularenv_train.py
federated/dqn/: experiment copy.ipynb  run.sh  tests.sh
federated/logistic_regression/: server.py
federated/mlp/: client.py  run.sh
federated/mul/dqn/: client.py  server.py  utils.py
federated/mul/logistic_regression/: client.py  server.py
federated/xgboost/: run.sh  server.py
flower/logistic_regression/: client.py  server.py
flower/one/tf-keras/flower-tf/: client.py  pyproject.toml  server.py  utils.py
flower/stable_flower/: client.py  server.py  utils.py
flower/xgboost/: client.py
papers/: README.md
planning/: done.txt  todo.txt
pre_processing/: data_analysis.ipynb  pre_processing.ipynb
pre_processing/previous/: one_mul_sur.ipynb
train_test/: classifiers_flower.ipynb  dqn_agent.py  plei.py  test.py  tf-keras.py  train_save.py
train_test/RL/: experiment.ipynb  train_test_save.py  utils.py
train_test/environments/: tabularenv_train.py
train_test/previous/: all_classifiers_working.ipynb
train_test/tf-keras/: pyproject.toml  tf-keras.py
(+30641 files in other folders)
