[tool.poetry]
name = "tf-keras"
version = "0.1.0"
description = ""
authors = ["andresantosr <andresanro03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
tdqm = "^0.0.1"
seaborn = "^0.13.2"
keras = "^3.8.0"
tensorflow = "^2.18.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
